@@ -19,6 +19,7 @@ tiberium-ion-core=Tiberium Ion Core
 tiberium-blue-explosives=Tiberium Explosives
 tiberium-rounds-magazine=Tiberium Rounds Magazine
 tiberium-nuke=Liquid Tiberium Bomb
+tiberium-artillery-shell=Tiberium Artillery Shell
 tiberium-rocket=Tiberium Core Missile
 tiberium-grenade-all=Advanced Sonic Grenade
 tiberium-grenade-blue=Sonic Grenade
@@ -46,6 +47,7 @@ tiberium-ion-core=A device for generating the ion streams for ion weapons.
 tiberium-blue-explosives=A form of Tiberium safe enough to handle, but explosive under the right conditions.
 tiberium-rounds-magazine=A magazine of Tiberium infused bullets.
 tiberium-rocket=A missile with a small amount of liquid Tiberium as payload.
+tiberium-artillery-shell=This long range shell is packed with a little Tiberium surprise that will leave behind some Tiberium Ore on impact.
 tiberium-grenade-all=A thrown explosive designed to use resonant frequencies to shatter any Tiberium Ore.
 tiberium-grenade-blue=A thrown explosive designed to use resonant frequencies to shatter Blue Tiberium Ore.
 tiberium-catalyst-missile-all=A missile that ignites a chain reaction destroying any nearby Tiberium Ore upon impact.
